# Doc-Ocr-Categorizer

./: .gitignore  README.md
Introduction/: Introduction-CN.md  Introduction-EN.md
Project-Architecture/architecture-diagram/: 项目架构概览.md
Project-Architecture/architecture-document/: 0-intro.md  1-Model.md  2-API.md  3-Backend.md  4-Frontend.md
doc/: 0-intro.md  2-API.md  3-Tables.md  4-Frontend.md
doc/Project-Architecture/architecture-diagram/: 架构图.md
doc/Project-Architecture/architecture-document/: 0-intro.md  1-ML-Model.md  3-Backend.md  3-Tables.md  4-Frontend.md
doc/modify-from-initial-template/: backend.md  frontend.md
doc/ver0.0-architecture/architecture-document/: 1-ML-Model.md  2-API.md
doc/ver0.1-architecture/: 0-intro.md  1-ML-Model.md  2-API.md  3-Tables.md  4-Frontend.md
src/backend/: .gitignore  LICENSE  README.md  alembic.ini  main.py  pre_run.sh  pyproject.toml  readme.md  run_debug.sh
src/backend/alembic/: env.py
src/backend/alembic/versions/: 26f86eafd52d_create_db.py  a99bbd095fa9_update_pgvector_support.py  e4497c67d07b_add_permission_control.py  ed51aa9da05e_set_cascade_deletion.py
src/backend/api/: category.py  document.py  image.py
src/backend/api/dl_models_util/: image_processor.py  text_summarizer.py
src/backend/api/util/: document_pg_util.py  document_return_util.py  document_util.py  nlp_str.py
src/backend/api/utils/: image_processor.py
src/backend/db/: db_setup.py
src/backend/db/models/: db_model.py
src/backend/db/models/utils/: enums.py
src/backend/pydantic_schemas/: pydantic_schema.py  schema.py
src/frontend/: .gitignore  .umirc.ts  LICENSE  README.md  index.html  package-lock.json  package.json  run.sh  tsconfig.json
src/frontend/src/: main.tsx
src/frontend/src/components/: MyLayout.tsx
src/frontend/src/constants/: index.js  index.ts
(+18 files in other folders)
