[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Doc-Ocr-Categorizer"
authors = ["Junxiao Liao"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.27"
uvicorn = "^0.27.1"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
minio = "^7.2.5"
rapidocr-onnxruntime = "^1.3.13"
python-multipart = "^0.0.9"
torch = {version = "^2.2.1+cu121", source = "torch_cu121"}
transformers = "^4.38.2"
pgvector = "^0.2.5"
alembic = "^1.13.1"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
